infrastructure/roles/backend/files/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-ingress
  namespace: backend
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`mysternathan.freeboxos.fr`) && PathPrefix(`/backend`)
    kind: Rule
    services:
    - name: backend-service
      port: 80
  tls:
    certResolver: letsencrypt
